Rename to sitepress

--- a/layouts/layout.html.haml
+++ b/layouts/layout.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta(charset="utf-8")
-    %title==#{resource.data["title"]} | Mascot
+    %title==#{resource.data["title"]} | Sitepress
     %link(href="/stylesheets/site.css" type="text/css" rel="stylesheet")
   %body
     %header
