Fix sidebar height

--- a/pages/stylesheets/site.css.sass
+++ b/pages/stylesheets/site.css.sass
@@ -50,7 +50,6 @@ body
   flex-direction: column
   margin: 0
   padding: 0
-  height: 100vh
   &--header
     display: none
   &--footer
@@ -58,8 +57,8 @@ body
   &--body
     display: flex
     flex-direction: row
-    min-height: 100%
   &--sidebar
+    min-height: 100vh
     min-width: $sidebar-width
     padding: $spacing
     border-right: 1px solid #eee
