Update logo and style

--- a/layouts/layout.html.haml
+++ b/layouts/layout.html.haml
@@ -3,11 +3,10 @@
   %head
     %meta(charset="utf-8")
     %title==#{current_page.data["title"]} | Sitepress
-    %link(href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet")
     %link(href="/stylesheets/site.css" type="text/css" rel="stylesheet")
   %body.layout
     .layout--body
-      .layout--sidebar
+      .layout--sidebar.accented-sidebar
         .layout--sidebar--logo
           %a(href="/index.html" title="Home")
             %img#logo(src="/images/logo.svg")
