--- a/layouts/layout.html.haml
+++ b/layouts/layout.html.haml
@@ -12,13 +12,13 @@
             %img#logo(src="/images/logo.svg")
         %nav.sidebar
           %strong.sidebar--header Getting started
-          -site.resources.glob("pages/getting-started/*.html*").select{ |r| r.data.has_key? "title" }.each do |r|
+          -order_glob("pages/getting-started/*.html*").each do |r|
             =link_to_if_current r.data["title"], r
-          %strong.sidebar--header Basics
-          -site.resources.glob("pages/basics/*.html*").select{ |r| r.data.has_key?("title") and r.request_path != "index.html" }.each do |r|
+          %strong.sidebar--header Documentation
+          -order_glob("pages/basics/*.html*").each do |r|
             =link_to_if_current r.data["title"], r
           %strong.sidebar--header Project
-          -site.resources.glob("pages/project/*.html*").select{ |r| r.data.has_key? "title" }.each do |r|
+          -order_glob("pages/project/*.html*").each do |r|
             =link_to_if_current r.data["title"], r
       %section.layout--content.content
         %h1=current_page.data["title"]
