--- a/layouts/layout.html.haml
+++ b/layouts/layout.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %meta(charset="utf-8")
+    %meta(name="viewport" content="width=device-width, initial-scale=1")
     %title==#{current_page.data["title"]} | Sitepress
     = stylesheet_link_tag "site"
   %body.layout
