--- a/layouts/body.html.erb
+++ b/layouts/body.html.erb
@@ -5,6 +5,7 @@
     <meta name = "viewport" content = "width = device-width">
     <title><%= current_page.data.fetch("title") %></title>
     <%= stylesheet_link_tag "tailwind" %>
+    <script defer data-domain="sitepress.cc" src="https://plausible.io/js/plausible.js"></script>
   </head>
   <body>
     <%= yield %>
