--- a/pages/index.html.slim
+++ b/pages/index.html.slim
@@ -4,7 +4,7 @@ subtitle: Build ambitious content websites in Rails
 layout: body
 ---
 
-.flex.flex-col.gap-y-16.my-16.px-4
+.flex.flex-col.gap-y-20.my-20.mx-4
   .flex.flex-col.max-w-4xl.gap-y-16.justify-center.items-center.mx-auto
     .logo
       =image_tag "logo-brown.svg", class: "max-w-[16rem] block dark:hidden"
@@ -54,8 +54,8 @@ layout: body
 
   hr
 
-  .flex.flex-col.gap-y-16.justify-center.items-center.py-12
-    h2.text-4xl.font-extrabold.font-slate-100.mb-12 Why Sitepress?
+  .flex.flex-col.gap-y-16.justify-center.items-center
+    h2.text-4xl.font-extrabold.font-slate-100 Why Sitepress?
     .prose.prose-lg.dark:prose-invert.max-w-3xl
       markdown:
         Static site generators are great frameworks for compiling static websites and publishing them to the web, but they force you to choose between running them completely static or inside of a Rails application. Sitepress lets you do both!
