--- a/partials/_menu.html.erb
+++ b/partials/_menu.html.erb
@@ -1,8 +1,10 @@
 <ul>
-  <li class="font-bold text-lg whitespace-nowrap text-brown-900 dark:text-white"><%= title %></li>
+  <li class="font-bold text-lg whitespace-nowrap text-brown-900 dark:text-white mb-2"><%= title %></li>
   <ul>
     <% order_glob(glob).each do |r| %>
-      <li><%= link_to_if_current r.data["title"], r, class: "text-brown-900 dark:text-brown-200", active_class: "font-bold text-black dark:text-white" %></li>
+      <li>
+        <%= link_to_if_current r.data["title"], r, class: "text-brown-900 dark:text-brown-200 border-l-2 ml-2 pl-4 py-1 block hover:border-brown-900 dark:border-brown-800 dark:hover:border-brown-200", active_class: "font-bold text-black dark:text-white border-l-2 ml-2 pl-4 py-1 border-brown-900 dark:border-white block" %>
+      </li>
     <% end %>
   </ul>
 </ul>
