--- a/assets/stylesheets/tailwind.css
+++ b/assets/stylesheets/tailwind.css
@@ -1721,6 +1721,10 @@ select {
   order: 5;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .my-16 {
   margin-top: 4rem;
   margin-bottom: 4rem;
@@ -1753,6 +1757,22 @@ select {
 
 .mb-12 {
   margin-bottom: 3rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
 }
 
 .block {
@@ -1857,6 +1877,10 @@ select {
   gap: 2.5rem;
 }
 
+.gap-0 {
+  gap: 0px;
+}
+
 .gap-y-16 {
   row-gap: 4rem;
 }
@@ -1897,6 +1921,12 @@ select {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
+.space-y-12 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(3rem * var(--tw-space-y-reverse));
+}
+
 .whitespace-nowrap {
   white-space: nowrap;
 }
@@ -1909,6 +1939,15 @@ select {
   border-width: 1px;
 }
 
+.border-l-2 {
+  border-left-width: 2px;
+}
+
+.border-brown-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(67 48 43 / var(--tw-border-opacity));
+}
+
 .bg-slate-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
@@ -1919,8 +1958,24 @@ select {
   background-color: rgb(67 48 43 / var(--tw-bg-opacity));
 }
 
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
+}
+
 .p-8 {
   padding: 2rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.p-0 {
+  padding: 0px;
 }
 
 .px-4 {
@@ -1951,6 +2006,44 @@ select {
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-\[0\.5rem\] {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-\[0\.25rem\] {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-\[0\.1rem\] {
+  padding-top: 0.1rem;
+  padding-bottom: 0.1rem;
+}
+
+.py-\[0\.2rem\] {
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
 }
 
 .text-center {
@@ -2027,6 +2120,10 @@ select {
   opacity: 0.5;
 }
 
+.opacity-90 {
+  opacity: 0.9;
+}
+
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -2035,6 +2132,11 @@ select {
   --tw-backdrop-brightness: brightness(.95);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.hover\:border-brown-900:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(67 48 43 / var(--tw-border-opacity));
 }
 
 .hover\:bg-brown-800:hover {
@@ -2070,6 +2172,31 @@ select {
     display: none;
   }
 
+  .dark\:border-brown-200 {
+    --tw-border-opacity: 1;
+    border-color: rgb(234 221 215 / var(--tw-border-opacity));
+  }
+
+  .dark\:border-brown-500 {
+    --tw-border-opacity: 1;
+    border-color: rgb(191 160 148 / var(--tw-border-opacity));
+  }
+
+  .dark\:border-brown-700 {
+    --tw-border-opacity: 1;
+    border-color: rgb(151 118 105 / var(--tw-border-opacity));
+  }
+
+  .dark\:border-brown-800 {
+    --tw-border-opacity: 1;
+    border-color: rgb(132 99 88 / var(--tw-border-opacity));
+  }
+
+  .dark\:border-white {
+    --tw-border-opacity: 1;
+    border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  }
+
   .dark\:bg-brown-900 {
     --tw-bg-opacity: 1;
     background-color: rgb(67 48 43 / var(--tw-bg-opacity));
@@ -2097,6 +2224,36 @@ select {
 
   .dark\:outline-1 {
     outline-width: 1px;
+  }
+
+  .dark\:hover\:border-brown-800:hover {
+    --tw-border-opacity: 1;
+    border-color: rgb(132 99 88 / var(--tw-border-opacity));
+  }
+
+  .dark\:hover\:border-brown-700:hover {
+    --tw-border-opacity: 1;
+    border-color: rgb(151 118 105 / var(--tw-border-opacity));
+  }
+
+  .hover\:dark\:border-brown-400:hover {
+    --tw-border-opacity: 1;
+    border-color: rgb(210 186 176 / var(--tw-border-opacity));
+  }
+
+  .dark\:hover\:border-brown-400:hover {
+    --tw-border-opacity: 1;
+    border-color: rgb(210 186 176 / var(--tw-border-opacity));
+  }
+
+  .dark\:hover\:border-brown-300:hover {
+    --tw-border-opacity: 1;
+    border-color: rgb(224 206 199 / var(--tw-border-opacity));
+  }
+
+  .dark\:hover\:border-brown-200:hover {
+    --tw-border-opacity: 1;
+    border-color: rgb(234 221 215 / var(--tw-border-opacity));
   }
 }
 
