Fix padding issue

--- a/pages/index.html.slim
+++ b/pages/index.html.slim
@@ -4,7 +4,7 @@ subtitle: Build ambitious content websites in Rails
 layout: body
 ---
 
-.flex.flex-col.gap-y-20.my-20.mx-4
+.flex.flex-col.gap-y-20.my-20.px-4
   .flex.flex-col.max-w-4xl.gap-y-16.justify-center.items-center.mx-auto
     .logo
       =image_tag "logo-brown.svg", class: "max-w-[16rem] block dark:hidden"
