--- a/assets/stylesheets/tailwind.css
+++ b/assets/stylesheets/tailwind.css
@@ -1721,13 +1721,9 @@ select {
   order: 5;
 }
 
-.m-0 {
-  margin: 0px;
-}
-
-.my-16 {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 .mx-auto {
@@ -1750,29 +1746,16 @@ select {
   margin-bottom: 2rem;
 }
 
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-}
-
 .mb-12 {
   margin-bottom: 3rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
 }
 
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 
-.ml-1 {
-  margin-left: 0.25rem;
+.ml-2 {
+  margin-left: 0.5rem;
 }
 
 .block {
@@ -1819,6 +1802,10 @@ select {
   max-width: 48rem;
 }
 
+.max-w-xl {
+  max-width: 36rem;
+}
+
 .max-w-fit {
   max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
@@ -1829,20 +1816,12 @@ select {
   max-width: 8rem;
 }
 
-.max-w-5xl {
-  max-width: 64rem;
-}
-
-.max-w-2xl {
-  max-width: 42rem;
-}
-
-.max-w-xl {
-  max-width: 36rem;
-}
-
 .max-w-full {
   max-width: 100%;
+}
+
+.max-w-none {
+  max-width: none;
 }
 
 .grid-cols-1 {
@@ -1869,20 +1848,12 @@ select {
   gap: 1rem;
 }
 
-.gap-16 {
-  gap: 4rem;
-}
-
-.gap-6 {
-  gap: 1.5rem;
-}
-
 .gap-10 {
   gap: 2.5rem;
 }
 
-.gap-0 {
-  gap: 0px;
+.gap-y-20 {
+  row-gap: 5rem;
 }
 
 .gap-y-16 {
@@ -1910,37 +1881,10 @@ select {
   row-gap: 1.5rem;
 }
 
-.gap-x-12 {
-  -moz-column-gap: 3rem;
-       column-gap: 3rem;
-}
-
-.gap-y-20 {
-  row-gap: 5rem;
-}
-
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
-.space-y-12 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(3rem * var(--tw-space-y-reverse));
-}
-
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .whitespace-nowrap {
@@ -1964,34 +1908,13 @@ select {
   border-color: rgb(67 48 43 / var(--tw-border-opacity));
 }
 
-.bg-slate-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-}
-
 .bg-brown-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(67 48 43 / var(--tw-bg-opacity));
 }
 
-.bg-opacity-50 {
-  --tw-bg-opacity: 0.5;
-}
-
 .p-8 {
   padding: 2rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
-.p-0 {
-  padding: 0px;
 }
 
 .px-4 {
@@ -1999,9 +1922,9 @@ select {
   padding-right: 1rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .px-8 {
@@ -2009,58 +1932,14 @@ select {
   padding-right: 2rem;
 }
 
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-
-.py-\[0\.5rem\] {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-\[0\.25rem\] {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.py-\[0\.1rem\] {
-  padding-top: 0.1rem;
-  padding-bottom: 0.1rem;
-}
-
-.py-\[0\.2rem\] {
-  padding-top: 0.2rem;
-  padding-bottom: 0.2rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
 }
 
 .pl-4 {
@@ -2081,31 +1960,26 @@ select {
   line-height: 2rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-extrabold {
   font-weight: 800;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-black {
@@ -2116,11 +1990,6 @@ select {
 .text-brown-900 {
   --tw-text-opacity: 1;
   color: rgb(67 48 43 / var(--tw-text-opacity));
-}
-
-.text-slate-200 {
-  --tw-text-opacity: 1;
-  color: rgb(226 232 240 / var(--tw-text-opacity));
 }
 
 .text-brown-100 {
@@ -2139,10 +2008,6 @@ select {
 
 .opacity-50 {
   opacity: 0.5;
-}
-
-.opacity-90 {
-  opacity: 0.9;
 }
 
 .filter {
@@ -2193,21 +2058,6 @@ select {
     display: none;
   }
 
-  .dark\:border-brown-200 {
-    --tw-border-opacity: 1;
-    border-color: rgb(234 221 215 / var(--tw-border-opacity));
-  }
-
-  .dark\:border-brown-500 {
-    --tw-border-opacity: 1;
-    border-color: rgb(191 160 148 / var(--tw-border-opacity));
-  }
-
-  .dark\:border-brown-700 {
-    --tw-border-opacity: 1;
-    border-color: rgb(151 118 105 / var(--tw-border-opacity));
-  }
-
   .dark\:border-brown-800 {
     --tw-border-opacity: 1;
     border-color: rgb(132 99 88 / var(--tw-border-opacity));
@@ -2245,31 +2095,6 @@ select {
 
   .dark\:outline-1 {
     outline-width: 1px;
-  }
-
-  .dark\:hover\:border-brown-800:hover {
-    --tw-border-opacity: 1;
-    border-color: rgb(132 99 88 / var(--tw-border-opacity));
-  }
-
-  .dark\:hover\:border-brown-700:hover {
-    --tw-border-opacity: 1;
-    border-color: rgb(151 118 105 / var(--tw-border-opacity));
-  }
-
-  .hover\:dark\:border-brown-400:hover {
-    --tw-border-opacity: 1;
-    border-color: rgb(210 186 176 / var(--tw-border-opacity));
-  }
-
-  .dark\:hover\:border-brown-400:hover {
-    --tw-border-opacity: 1;
-    border-color: rgb(210 186 176 / var(--tw-border-opacity));
-  }
-
-  .dark\:hover\:border-brown-300:hover {
-    --tw-border-opacity: 1;
-    border-color: rgb(224 206 199 / var(--tw-border-opacity));
   }
 
   .dark\:hover\:border-brown-200:hover {
