Start an articles section

--- a/layouts/layout.html.erb
+++ b/layouts/layout.html.erb
@@ -3,7 +3,7 @@
     <header class="md:col-start-2 order-1 md:order-1">
       <h1 class="text-5xl font-extrabold text-brown-900 dark:text-white"><%= current_page.data["title"] %></h1>
       <% if subtitle = current_page.data["subtitle"] %>
-        <h2 class="text-2xl opacity-50"><%= subtitle %></h2>
+        <h2 class="text-2xl opacity-50 mt-2"><%= subtitle %></h2>
       <% end %>
     </header>
     <article class="prose dark:prose-invert max-w-fit order-2 md:order-3">
